

[build-system]
build-backend = "_own_version_helper:build_meta"
requires = [
  "setuptools>=77.0.3",
  "vcs-versioning>=0.1.1",
  'tomli<=2.0.2; python_version < "3.11"',
  'typing-extensions; python_version < "3.11"',
]
backend-path = [
  ".",
  "./src",
  "../vcs-versioning/src"
]
[tools.uv.sources]
vcs-versioning= "../vcs-versioning"
[project]
name = "setuptools-scm"
description = "the blessed package to manage your versions by scm tags"
readme = "README.md"
license = "MIT"
authors = [
    {name="Ronny Pfannschmidt", email="opensource@ronnypfannschmidt.de"}
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Version Control",
  "Topic :: System :: Software Distribution",
  "Topic :: Utilities",
]
dynamic = [
  "version",
]
dependencies = [
  # Core VCS functionality - workspace dependency
  "vcs-versioning",
  "packaging>=20",
  # https://github.com/pypa/setuptools-scm/issues/1112 - re-pin in a breaking release
  "setuptools", # >= 61",
  'tomli>=1; python_version < "3.11"',
  'typing-extensions; python_version < "3.11"',
]


[project.optional-dependencies]
rich = ["rich"]
simple = []
toml = []

[dependency-groups]
docs = [
  "mkdocs",
  "mkdocs-entangled-plugin",
  "mkdocs-include-markdown-plugin",
  "mkdocs-material",
  "mkdocstrings[python]",
  "pygments",
  "griffe-public-wildcard-imports",
]
test = [
  "pip",
  "build",
  "pytest",
  "pytest-timeout",  # Timeout protection for CI/CD
  "pytest-xdist",
  "rich",
  "ruff",
  "mypy",
  'typing-extensions; python_version < "3.11"',
  "griffe",
  "griffe-public-wildcard-imports",
  "flake8",
]

[project.urls]
documentation = "https://setuptools-scm.readthedocs.io/"
repository = "https://github.com/pypa/setuptools-scm/"

[project.entry-points.console_scripts]
setuptools-scm = "vcs_versioning._cli:main"

[project.entry-points."distutils.setup_keywords"]
use_scm_version = "setuptools_scm._integration.setuptools:version_keyword"

[project.entry-points."pipx.run"]
setuptools-scm = "vcs_versioning._cli:main"
setuptools_scm = "vcs_versioning._cli:main"

[project.entry-points."setuptools.file_finders"]
setuptools_scm = "vcs_versioning._file_finders:find_files"

[project.entry-points."setuptools.finalize_distribution_options"]
setuptools_scm = "setuptools_scm._integration.setuptools:infer_version"

[project.entry-points."setuptools_scm.files_command"]
".git" = "vcs_versioning._file_finders._git:git_find_files"
".hg" = "vcs_versioning._file_finders._hg:hg_find_files"

[project.entry-points."setuptools_scm.files_command_fallback"]
".git_archival.txt" = "vcs_versioning._file_finders._git:git_archive_find_files"
".hg_archival.txt" = "vcs_versioning._file_finders._hg:hg_archive_find_files"

# VCS-related entry points are now provided by vcs-versioning package
# Only file-finder entry points remain in setuptools_scm

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.dynamic]
version = { attr = "_own_version_helper.version"}

[tool.setuptools_scm]
root = ".."

[tool.ruff]
lint.extend-select = ["YTT", "B", "C4", "DTZ", "ISC", "LOG", "G", "PIE", "PYI", "PT", "FLY", "I", "C90", "PERF", "W", "PGH", "PLE", "UP", "FURB", "RUF"]
lint.ignore = ["B028", "LOG015", "PERF203"]
lint.preview = true

[tool.ruff.lint.isort]
force-single-line = true
from-first = false
lines-between-types = 1
order-by-type = true

[tool.pytest.ini_options]
minversion = "8"
testpaths = ["testing_scm"]
addopts = ["-ra", "--strict-config", "--strict-markers", "-p", "vcs_versioning.test_api"]
timeout = 300  # 5 minutes timeout per test for CI protection
filterwarnings = [
  "error",
  "ignore:.*tool\\.setuptools_scm.*",
  "ignore:.*git archive did not support describe output.*:UserWarning",
]
log_level = "debug"
log_cli_level = "info"
# disable unraisable until investigated
markers = [
  "issue(id): reference to github issue",
  "skip_commit: allows to skip committing in the helpers",
]

[tool.uv]
default-groups = ["test"]

[tool.towncrier]
directory = "changelog.d"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
template = "changelog.d/template.md"
title_format = "## {version} ({project_date})"
issue_format = "[#{issue}](https://github.com/pypa/setuptools-scm/issues/{issue})"
underlines = ["", "", ""]

[[tool.towncrier.type]]
directory = "removal"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecation"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "feature"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Miscellaneous"
showcontent = true
